fix: use safe area on ios

--- a/src/app/components/game/game.component.scss
+++ b/src/app/components/game/game.component.scss
@@ -12,8 +12,8 @@ canvas {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  min-height: calc(100% + env(safe-area-inset-top));
   width: 100%;
-  height: 100%;
 }
 
 button {
