--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,27 @@
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 @import '~nes.css/css/nes.css';
 
+:root {
+  --sat: env(safe-area-inset-top);
+  --sar: env(safe-area-inset-right);
+  --sab: env(safe-area-inset-bottom);
+  --sal: env(safe-area-inset-left);
+}
+
 * {
   touch-action: manipulation !important;
+}
+
+html {
+  min-height: calc(100% + env(safe-area-inset-top));
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+  
+  background-attachment: fixed;
+  background-image: url('./assets/images/backgrounds/00053-583843164.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #000000;
 }
 
 html,
@@ -35,6 +54,9 @@ h2 {
 }
 
 .overlay {
+  min-height: calc(100% + env(safe-area-inset-top));
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+
   background-color: rgba(0, 0, 0, 0.3);
   position: absolute;
   top: 0;
@@ -55,8 +77,4 @@ h2 {
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: #000000;
-  background-image: url('/assets/images/backgrounds/00053-583843164.png');
-  background-repeat: no-repeat;
-  background-size: cover;
 }
